--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy</title>
+    <title>Retro Zoo CEO</title>
     <style>
         html, body {
             margin: 0;
@@ -20,11 +20,11 @@
             align-items: stretch;
         }
         header {
-            flex: 0 0 30vh; /* fixed height: 20% of viewport */
+            flex: 0 0 30vh; 
             display: flex;
             justify-content: center;
             align-items: center;
-            overflow: hidden; /* ensures content can't expand the header */
+            overflow: hidden; 
         }
 
         header img {
@@ -32,7 +32,7 @@
             max-width: 100%;
             height: auto;
             width: auto;
-            object-fit: contain; /* keeps proportions */
+            object-fit: contain;
             display: block;
         }
                 main {
@@ -51,11 +51,11 @@
             line-height: 1.6;
         }
         footer {
-            flex: 0 0 10vh; /* fixed height: 20% of viewport */
+            flex: 0 0 10vh;
             display: flex;
             justify-content: center;
             align-items: end;
-            overflow: hidden; /* ensures content can't expand the header */
+            overflow: hidden;
             text-align: center;
             color: #aaaaaa;
             font-size: 14px;
